Fix logo container collapsing

--- a/src/style/pages/default/default.sass
+++ b/src/style/pages/default/default.sass
@@ -9,7 +9,7 @@ main.default
       .logo-container
         display: flex
         flex-direction: row
-        flex: 1 0 0
+        flex: 1 0 auto
         align-items: center
         justify-content: center
 
